--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 peewee
 git+https://github.com/Rapptz/discord.py@rewrite#egg-discord.py[voice]
-git+https://github.com/sterlingbeason/coinmarketcap-professional
+redis
