Revamp price function

--- a/settings.py.example
+++ b/settings.py.example
@@ -26,3 +26,5 @@ DEPORT="```I hereby withdraw your Citizenship to the Banano Republic, we don’t
 # Troll messages
 TROLL="```You have been marked as a TROLL and are no longer a Citizen in the Banano Republic```"
 UNTROLL="```You are no longer known as a TROLL in the Banano Republic, please reapply for Citizenship.```"
+# Bolivar price (you probably dont want to do this yourself)
+VESPRICE=False
