Reference roles by id
fixes #17

--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -8,7 +8,7 @@ data:
     # Discord
     discord_bot_token = os.getenv('BOT_TOKEN')
     # Restricted roles for certain commands
-    admin_roles = ['Moderators', 'Core', 'Community Managers', 'Dictators', 'Jungle Junta', 'BANANO POLICE', 'Mods', 'Owner']
+    admin_roles = [431126363261370392, 416789711034777600, 840979414299967518, 557648182872375318, 430732639130091541]
     # Admin User IDs
     admin_ids=['303599885800964097','85280688571416576']
     # Set channels here to exclude from from like !meme and !pup
@@ -18,13 +18,13 @@ data:
     # Status
     playing_status=command_prefix + 'commandlist'
     # Role for mute/muzzle
-    muzzled_role='muzzled'
+    muzzled_role=439465076525760512
     # Role for image permissions
-    IMAGES_ROLE='punishment white'
+    IMAGES_ROLE=653279161523241010
     # Banano-discord
-    ARREST_ROLE='BANANO JAIL'
-    CITIZEN_ROLE='Citizens'
-    TROLL_ROLL='Troll'
+    ARREST_ROLE=428615122336874496
+    CITIZEN_ROLE=431171347427622913
+    TROLL_ROLL=600771737138888792
     # Arrest messages
     RIGHTS="```You have been arrested by the BRPD for crimes against the Banano Republic. You have the right to remain unripe. Anything you say can and will be used against you in a banano court. You have the right to have an orangutan. If you cannot afford one, one will be appointed to you by the court. Until your orangutan arrives, you will spend your time in #jail, bail is set at 10 BANANO.```"
     RELEASE="```You have been released from Jail!```"
