--- a/settings.py.example
+++ b/settings.py.example
@@ -32,3 +32,6 @@ VESPRICE=False
 KICK_LOG=633355534535491605
 # Jail channel id (For sending messages to recently jailed people, who may not be able to see the channel they were just jailed in)
 JAIL_ID=416306504124071938
+
+#zapper api key for wban farms. Base64 encoding of public one on https://studio.zapper.fi/docs/apis/endpoints-api-keys
+ZAPPER_API="OTZlMGNjNTEtYTYyZS00MmNhLWFjZWUtOTEwZWE3ZDJhMjQxOg=="
