Updated Zapper API key
Zapper removed the public API key, this change now updates it to instead use a private API key.

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -32,6 +32,11 @@ spec:
               secretKeyRef:
                 name: beatrice
                 key: bot_token
+          - name: ZAPPER_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: beatrice
+                key: zapper_api_key
         volumeMounts:
         - name: conf
           mountPath: /config
